# stemyquery

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/worktrees/blissful-ellis/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/worktrees/blissful-ellis/docs/: encoder-roles.md  (+3 more)
data/index/: chunks.json  papers.json
data/index/bm25/: corpus.pkl
data/raw/: ewoldt.htm  sample_pmc.xml
docs/: architecture-diagram.md  encoder-roles.md  github-and-deployment.md  verifying-index.md
eval/: eval_results.json  evaluate.py  queries.json
frontend/: app.py  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/app/: App.tsx  routes.ts
frontend/src/components/: ConfidenceBadge.tsx  ContextViewer.tsx  ResultCard.tsx  ResultList.tsx  SearchBar.tsx
frontend/src/hooks/: useChunkContext.ts  usePapers.ts  useQuery.ts  useTopics.ts
frontend/src/styles/: index.css  theme.css
frontend/src/types/: index.ts
src/atheria/: __init__.py  config.py
src/atheria/api/: __init__.py  app.py  dependencies.py
src/atheria/db/: connection.py  migrations.py
src/atheria/index/: __init__.py  bm25_index.py  build_index.py  dense_index.py
src/atheria/ingest/: __init__.py  chunker.py  pmc_parser.py
src/atheria/models/: __init__.py  chunk.py  paper.py
src/atheria/retrieval/: __init__.py  formatter.py  hybrid.py
src/atheria/schemas/: ingest.py  papers.py  query.py  topics.py
src/atheria/services/: ingest_service.py  query_service.py
(+71 files in other folders)
