[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atheria"
version = "0.1.0"
description = "Biochem paper section finder — BM25 + MedCPT retrieval for metric baseline queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "rank-bm25>=0.2.2",
    "sqlite-vec>=0.1.0",
    "pubmed-parser>=0.2.1",
    "lxml>=4.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.22",
]

[project.scripts]
atheria = "atheria.api.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["atheria*"]
